--- a/index.html
+++ b/index.html
@@ -1,9 +1,115 @@
 <!DOCTYPE html>
-<html>
+<!--ICD2O Unit 5-04 HTML-->
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="museum entry discount program" />
+    <meta name="keywords" content="ICD2O, mths" />
+    <meta name="author" content="Aimar Fernandez" />
+    <meta name="viewport" content="width+device-width, initial-scale=.1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.getmdl.io/1.3.0/material.deep_orange-red.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <title>Museum Entry Discount Program</title>
   </head>
   <body>
-    <p>Paragraph</p>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <br />
+        <div class="mdl_layout__header-row">
+          <span class="mdl-layout-title"
+            >Museum Entry Discount Program</span
+          >
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <div>
+          <img
+            src="./images/download.png"
+            alt="museum"
+          />
+        </div>
+        <br />
+        <div class="page-content">
+          Enter in your age
+        </div>
+        <br />
+        <form action="#">
+          <!-- Textfield -->
+          <div
+            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+          >
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="age-number"
+            />
+            <label class="mdl-textfield__label" for="sample4"> Age...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+          <br />
+          <p>Enter the day of the week for your visit</p>
+          <!--Radio-->
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="monday">
+            <input type="radio" id="monday" class="mdl-radio__button" name="weekday" value="1" checked />
+            <span class="mdl-radio__label">Monday</span>
+          </label>
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="tuesday">
+            <input type="radio" id="tuesday" class="mdl-radio__button" name="weekday" value="2" />
+            <span class="mdl-radio__label">Tuesday</span>
+          </label>
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="wednesday">
+            <input type="radio" id="wednesday" class="mdl-radio__button" name="weekday" value="3" />
+            <span class="mdl-radio__label">Wednesday</span>
+          </label>
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thursday">
+            <input type="radio" id="thursday" class="mdl-radio__button" name="weekday" value="4" />
+            <span class="mdl-radio__label">Thursday</span>
+          </label>
+          <br />
+          <br />
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="friday">
+            <input type="radio" id="friday" class="mdl-radio__button" name="weekday" value="5" />
+            <span class="mdl-radio__label">Friday</span>
+          </label>
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="saturday">
+            <input type="radio" id="saturday" class="mdl-radio__button" name="weekday" value="6" />
+            <span class="mdl-radio__label">Saturday</span>
+          </label>
+          <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="sunday">
+            <input type="radio" id="sunday" class="mdl-radio__button" name="weekday" value="7" />
+            <span class="mdl-radio__label">Sunday</span>
+          </label>
+          <br>
+          <br>
+          <!-- Raised button with ripple -->
+          <button
+            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+            onclick="myButtonClicked()"
+            type="button"
+          >
+            Check
+          </button>
+        </form>
+        <br />
+        <br />
+        <div class="page-content-answer">
+          <div id="answer"></div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
